Fix HTML encoding issues in gardenbar.html

--- a/gardenbar.html
+++ b/gardenbar.html
@@ -23,9 +23,9 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="index.html#about">About</a></li>
-          <li><a href="garden-bar.html" class="active">Garden Bar</a></li>
-          <li><a href="mamas-place.html">Mama's Place</a></li>
-          <li><a href="yusufs-vip.html">Yusuf's VIP</a></li>
+          <li><a href="gardenbar.html" class="active">Garden Bar</a></li>
+          <li><a href="mamasplace.html">Mama's Place</a></li>
+          <li><a href="yusufsvip.html">Yusuf's VIP</a></li>
           <li><a href="index.html#gallery">Gallery</a></li>
           <li><a href="index.html#contact">Contact</a></li>
         </ul>
@@ -283,9 +283,9 @@
           <h4>Quick Links</h4>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="garden-bar.html">Garden Bar</a></li>
-            <li><a href="mamas-place.html">Mama's Place</a></li>
-            <li><a href="yusufs-vip.html">Yusuf's VIP</a></li>
+            <li><a href="gardenbar.html">Garden Bar</a></li>
+            <li><a href="mamasplace.html">Mama's Place</a></li>
+            <li><a href="yusufsvip.html">Yusuf's VIP</a></li>
             <li><a href="index.html#contact">Contact</a></li>
           </ul>
         </div>
@@ -312,4 +312,5 @@
 
   <script src="main.js"></script>
 </body>
+
 </html>
