Fix HTML structure and update links

--- a/mamasplace.html
+++ b/mamasplace.html
@@ -23,9 +23,9 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="index.html#about">About</a></li>
-          <li><a href="garden-bar.html">Garden Bar</a></li>
-          <li><a href="mamas-place.html" class="active">Mama's Place</a></li>
-          <li><a href="yusufs-vip.html">Yusuf's VIP</a></li>
+          <li><a href="gardenbar.html">Garden Bar</a></li>
+          <li><a href="mamasplace.html" class="active">Mama's Place</a></li>
+          <li><a href="yusufsvip.html">Yusuf's VIP</a></li>
           <li><a href="index.html#gallery">Gallery</a></li>
           <li><a href="index.html#contact">Contact</a></li>
         </ul>
@@ -256,9 +256,9 @@
               <div class="col-12 form-group">
                 <select name="room_type" class="form-control" required>
                   <option value="">Select Room Type</option>
-                  <option value="standard">Standard Room (₦30,000/night)</option>
-                  <option value="deluxe">Deluxe Room (₦40,000/night)</option>
-                  <option value="suite">Suite (₦55,000/night)</option>
+                  <option value="standard">Standard Room (₦40,000/night)</option>
+                  <option value="deluxe">Deluxe Room (₦50,000/night)</option>
+                  <option value="suite">Suite (₦60,000/night)</option>
                 </select>
               </div>
               <div class="col-12 form-group">
@@ -304,9 +304,9 @@
           <h4>Quick Links</h4>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="garden-bar.html">Garden Bar</a></li>
-            <li><a href="mamas-place.html">Mama's Place</a></li>
-            <li><a href="yusufs-vip.html">Yusuf's VIP</a></li>
+            <li><a href="gardenbar.html">Garden Bar</a></li>
+            <li><a href="mamasplace.html">Mama's Place</a></li>
+            <li><a href="yusufsvip.html">Yusuf's VIP</a></li>
             <li><a href="index.html#contact">Contact</a></li>
           </ul>
         </div>
@@ -333,4 +333,5 @@
 
   <script src="main.js"></script>
 </body>
+
 </html>
