Update print statement from 'Hello' to 'Goodbye'

--- a/yusufsvip.html
+++ b/yusufsvip.html
@@ -23,9 +23,9 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="index.html#about">About</a></li>
-          <li><a href="garden-bar.html">Garden Bar</a></li>
-          <li><a href="mamas-place.html">Mama's Place</a></li>
-          <li><a href="yusufs-vip.html" class="active">Yusuf's VIP</a></li>
+          <li><a href="gardenbar.html">Garden Bar</a></li>
+          <li><a href="mamasplace.html">Mama's Place</a></li>
+          <li><a href="yusufsvip.html" class="active">Yusuf's VIP</a></li>
           <li><a href="index.html#gallery">Gallery</a></li>
           <li><a href="index.html#contact">Contact</a></li>
         </ul>
@@ -329,9 +329,9 @@
           <h4>Quick Links</h4>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="garden-bar.html">Garden Bar</a></li>
-            <li><a href="mamas-place.html">Mama's Place</a></li>
-            <li><a href="yusufs-vip.html">Yusuf's VIP</a></li>
+            <li><a href="gardenbar.html">Garden Bar</a></li>
+            <li><a href="mamasplace.html">Mama's Place</a></li>
+            <li><a href="yusufsvip.html">Yusuf's VIP</a></li>
             <li><a href="index.html#contact">Contact</a></li>
           </ul>
         </div>
@@ -358,4 +358,5 @@
 
   <script src="main.js"></script>
 </body>
+
 </html>
