Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="wcXPKW4Lx1lBp7ZrZV6WJk1QoeKVyrUa5uEAtfBfS6w" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="African Garden Lodge - Your Serene Escape in Lagos. Garden Bar, Mama's Place Lodge, and Yusuf's VIP Lounge.">
@@ -389,4 +390,5 @@
 
   <script src="main.js"></script>
 </body>
+
 </html>
