Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1,6 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- ==========================================
+     SEO META TAGS
+     Paste these in the <head> section of ALL your HTML pages
+     (index.html, gardenbar.html, mamasplace.html, yusufsvip.html)
+     ========================================== -->
+
+<!-- Primary Meta Tags -->
+<title>African Garden Lodge | Hotel & Bar in Ikeja Lagos | Garden Bar, Mama's Place</title>
+<meta name="title" content="African Garden Lodge | Hotel & Bar in Ikeja Lagos">
+<meta name="description" content="Experience authentic African hospitality at African Garden Lodge in Omole Phase 1, Ikeja. Three unique venues: Garden Bar with pool, Mama's Place boutique hotel (₦30k/night), and Yusuf's VIP Lounge. Book now!">
+<meta name="keywords" content="African Garden Lodge, hotel in Lagos, Garden Bar Lagos, Ikeja hotel, Omole Phase 1, boutique hotel Lagos, bar in Lagos, Mama's Place, Yusuf's VIP Lounge, affordable hotel Lagos, pool bar Lagos">
+<meta name="robots" content="index, follow">
+<meta name="language" content="English">
+<meta name="author" content="African Garden Lodge">
+
+<!-- Geo Tags -->
+<meta name="geo.region" content="NG-LA">
+<meta name="geo.placename" content="Ikeja, Lagos">
+<meta name="geo.position" content="6.6018;3.3515">
+<meta name="ICBM" content="6.6018, 3.3515">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://lord-saviord1.github.io/africangardenlodge/">
+<meta property="og:title" content="African Garden Lodge | Hotel & Bar in Ikeja Lagos">
+<meta property="og:description" content="Experience authentic African hospitality. Three unique venues: Garden Bar, Mama's Place Hotel, and Yusuf's VIP Lounge. Located in Omole Phase 1, Ikeja.">
+<meta property="og:image" content="https://lord-saviord1.github.io/africangardenlodge/assets/img/og-image.jpg">
+<meta property="og:locale" content="en_NG">
+<meta property="og:site_name" content="African Garden Lodge">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://lord-saviord1.github.io/africangardenlodge/">
+<meta property="twitter:title" content="African Garden Lodge | Hotel & Bar in Ikeja Lagos">
+<meta property="twitter:description" content="Experience authentic African hospitality. Three unique venues in Omole Phase 1, Ikeja.">
+<meta property="twitter:image" content="https://lord-saviord1.github.io/africangardenlodge/assets/img/og-image.jpg">
+
+<!-- Mobile App Tags -->
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+<!-- Canonical URL (prevents duplicate content issues) -->
+<link rel="canonical" href="https://lord-saviord1.github.io/africangardenlodge/">
+
+<!-- Schema.org Structured Data for Local Business -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Hotel",
+  "name": "African Garden Lodge",
+  "image": "https://lord-saviord1.github.io/africangardenlodge/assets/img/hero-1.jpg",
+  "description": "Boutique hotel and bar in Omole Phase 1, Ikeja, Lagos. Features Garden Bar with pool, Mama's Place hotel rooms, and Yusuf's VIP Lounge.",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "418 Omofade Crescent, Omole Phase 1",
+    "addressLocality": "Ikeja",
+    "addressRegion": "Lagos",
+    "postalCode": "100001",
+    "addressCountry": "NG"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 6.6018,
+    "longitude": 3.3515
+  },
+  "telephone": "+2348066774495",
+  "email": "ozoemenad4@gmail.com",
+  "url": "https://lord-saviord1.github.io/africangardenlodge/",
+  "priceRange": "₦₦",
+  "openingHoursSpecification": {
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": [
+      "Monday",
+      "Tuesday",
+      "Wednesday",
+      "Thursday",
+      "Friday",
+      "Saturday",
+      "Sunday"
+    ],
+    "opens": "10:00",
+    "closes": "23:00"
+  },
+  "servesCuisine": "African, Nigerian",
+  "hasMenu": "https://lord-saviord1.github.io/africangardenlodge/gardenbar.html",
+  "amenityFeature": [
+    {
+      "@type": "LocationFeatureSpecification",
+      "name": "Swimming Pool"
+    },
+    {
+      "@type": "LocationFeatureSpecification",
+      "name": "Bar"
+    },
+    {
+      "@type": "LocationFeatureSpecification",
+      "name": "Restaurant"
+    },
+    {
+      "@type": "LocationFeatureSpecification",
+      "name": "Free WiFi"
+    }
+  ],
+  "sameAs": [
+    "https://www.instagram.com/africangardenlodge",
+    "https://www.facebook.com/africangardenlodge"
+  ]
+}
+</script>
+  
   <meta name="google-site-verification" content="wcXPKW4Lx1lBp7ZrZV6WJk1QoeKVyrUa5uEAtfBfS6w" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -392,3 +503,4 @@
 </body>
 
 </html>
+
